--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,11 @@
 version: "3.7"
 services:
   messages-api:
-    image: "gcr.io/aylien-production/api-messages-challenge:1.0"
+    image: "gcr.io/aylien-production/api-messages-challenge:53b769a"
     ports:
       - 5000:5000
+    environment:
+      - REDIS_HOST=redis
     networks:
       - messages
 
@@ -14,28 +16,6 @@ services:
     ports:
       - 6379:6379
 
-  elasticsearch:
-    image: "docker.elastic.co/elasticsearch/elasticsearch:7.6.1"
-    environment:
-      - discovery.type=single-node
-    ports:
-      - 9200:9200
-    networks:
-      - elk
-
-  kibana:
-    image: "docker.elastic.co/kibana/kibana-oss:7.0.1"
-    container_name: "kibana"
-    environment:
-      - "ELASTICSEARCH_URL=http://<elasticsearch-endpoint>:9200"
-    ports:
-      - "5601:5601"
-    restart: "unless-stopped"
-    networks:
-      - elk
-
 networks:
-  elk:
-    driver: bridge
   messages:
     driver: bridge
