--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   messages-api:
-    image: "gcr.io/aylien-production/api-messages-challenge:53b769a"
+    image: "mdibaiee/aylien-messages-api:1.0"
     ports:
       - 5000:5000
     environment:
